--- a/mysources.bib
+++ b/mysources.bib
@@ -44,7 +44,7 @@
 }
 
 @article{opencv_library,
-    author = {Bradski, G.},
+    author = {Bradski, G. },
     citeulike-article-id = {2236121},
     journal = {Dr. Dobb's Journal of Software Tools},
     keywords = {bibtex-import},
@@ -73,4 +73,22 @@
   pages={13},
   url={http://stacks.iop.org/0031-9120/6/i=1/a=003},
   year={1971},
+}
+
+@online{py_extract,
+  author={Yang, Jingjie},
+  title={PhyIA/extract.py at master · Pyxidatol-C/PhyIA},
+  url={https://github.com/Pyxidatol-C/PhyIA/blob/master/scripts/extract.py},
+  year={2019}
+}
+
+@article{fourier,
+  title={Improvements of measuring the width of Fraunhofer diffraction fringes using Fourier transform},
+  author={Wu, Yicheng and Ma, Jialin and Yang, Yi and Sun, Ping},
+  year={2015},
+  journal={Optik},
+  volume={126},
+  issue = {23},
+  pages = {4142--4145},
+  M3={doi: 10.1016/j.ijleo.2015.07.202}
 }
