--- a/mysources.bib
+++ b/mysources.bib
@@ -92,3 +92,16 @@
   pages = {4142--4145},
   M3={doi: 10.1016/j.ijleo.2015.07.202}
 }
+
+@book{textbook,
+  title={IB Physics Course Companion},
+  author={Homer, David and Bowen-Jones, Michael},
+  year={2014},
+}
+
+@online{scipy_smooth_filter, 
+  url={https://docs.scipy.org/doc/scipy-1.2.1/reference/generated/scipy.signal.savgol_filter.html},
+  title={SciPy v1.2.1 Reference Guide},
+  journal={Docs.scipy.org},
+  year={2019}
+}
